bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value isOverR
  if (isOverR()){
      ^BDR:7: error: not found: value isOverL
  else if (isOverL()){
           ^BDR:11: error: not found: value isOverI
  else if (isOverI()){
           ^BDR:16: error: not found: value isOverB
  else if (isOverB()){
           ^BDR:21: error: not found: value isOverC
  else if (isOverC()){
           ^BDR:26: error: not found: value isOverZ
  else if (isOverZ()){
           ^BDR:29: error: not found: value isOverY
  else if (isOverY()){
           ^BDR:33: error: not found: value isOverX
  else if (isOverX()){
           ^